--- a/index.html
+++ b/index.html
@@ -210,6 +210,12 @@
                         <h3 class="text-xl font-bold text-slate-700">Temperature (C ↔ F)</h3>
                     </div>
 
+                    <div class="mb-4 text-sm text-slate-600 bg-red-50 p-3 rounded">
+                        <strong>Formulas:</strong><br>
+                        °F = (°C × 9/5) + 32<br>
+                        °C = (°F − 32) × 5/9
+                    </div>
+
                     <div class="space-y-4">
                         <div>
                             <label class="block text-sm font-medium text-slate-700 mb-1">Value</label>
@@ -375,6 +381,9 @@
                                     <option value="AUD">Australia - Dollar (AUD A$)</option>
                                     <option value="CAD">Canada - Dollar (CAD C$)</option>
                                     <option value="CNY">China - Yuan (CNY ¥)</option>
+                                    <option value="CHF">Switzerland - Franc (CHF Fr)</option>
+                                    <option value="SGD">Singapore - Dollar (SGD S$)</option>
+                                    <option value="AED">UAE - Dirham (AED د.إ)</option>
                                 </select>
                             </div>
                         </div>
@@ -390,6 +399,9 @@
                                 <option value="AUD">Australia - Dollar (AUD A$)</option>
                                 <option value="CAD">Canada - Dollar (CAD C$)</option>
                                 <option value="CNY">China - Yuan (CNY ¥)</option>
+                                <option value="CHF">Switzerland - Franc (CHF Fr)</option>
+                                <option value="SGD">Singapore - Dollar (SGD S$)</option>
+                                <option value="AED">UAE - Dirham (AED د.إ)</option>
                             </select>
                         </div>
                     </div>
@@ -828,7 +840,20 @@
             r.innerText = (u==='kmh') ? `= ${(v*5/18).toFixed(2)} m/s` : `= ${(v*18/5).toFixed(2)} km/h`;
         }
         function convertCurrency() {
-            const rates = {'USD': 1, 'EUR': 0.95, 'INR': 83.5, 'GBP': 0.79, 'JPY': 150.0, 'AUD': 1.52, 'CAD': 1.36, 'CNY': 7.20};
+            // Updated rates including new currencies
+            const rates = {
+                'USD': 1, 
+                'EUR': 0.95, 
+                'INR': 83.5, 
+                'GBP': 0.79, 
+                'JPY': 150.0, 
+                'AUD': 1.52, 
+                'CAD': 1.36, 
+                'CNY': 7.20,
+                'CHF': 0.90, // Approx
+                'SGD': 1.35, // Approx
+                'AED': 3.67  // Pegged
+            };
             const val = parseFloat(document.getElementById('conv-cur-val').value);
             const from = document.getElementById('conv-cur-from').value;
             const to = document.getElementById('conv-cur-to').value;
@@ -894,8 +919,8 @@
                 return Math.floor(Math.random() * (max * 2 - min + 1)) + min; 
             };
 
-            // 1. PHYSICS: Ohm's Law (33%)
-            if (typeRoll < 0.33) {
+            // 1. PHYSICS: Ohm's Law (25%)
+            if (typeRoll < 0.25) {
                 const I = parseFloat(getNum(1, 10));
                 const R = parseFloat(getNum(2, 20));
                 text = `A circuit has a current of ${I} Amps and resistance of ${R} Ohms. Calculate Voltage.`;
@@ -904,8 +929,8 @@
                 steps = [`Ohm's Law: V = I × R`, `V = ${I} × ${R}`, `V = ${ans} Volts`];
                 document.getElementById('prob-tag').innerText = "Physics: Ohm's Law";
             } 
-            // 2. PHYSICS: Speed (33%)
-            else if (typeRoll < 0.66) {
+            // 2. PHYSICS: Speed (25%)
+            else if (typeRoll < 0.50) {
                 const d = parseFloat(getNum(100, 500));
                 const t = parseFloat(getNum(10, 50));
                 text = `An object travels ${d} meters in ${t} seconds. Calculate Speed (m/s).`;
@@ -914,7 +939,16 @@
                 steps = [`Speed = Distance / Time`, `Speed = ${d} / ${t}`, `Speed = ${ans} m/s`];
                 document.getElementById('prob-tag').innerText = "Physics: Kinematics";
             }
-            // 3. TRAINS (33%)
+            // 3. PHYSICS: Temperature (25%) - NEW FEATURE
+            else if (typeRoll < 0.75) {
+                const C = Math.floor(getNum(0, 100)); // Keep whole numbers for cleaner beginner/interm
+                text = `Convert ${C}°C (Celsius) to Fahrenheit.`;
+                ans = ((C * 9/5) + 32).toFixed(2);
+                unit = "°F";
+                steps = [`Formula: (°C × 9/5) + 32`, `${C} × 1.8 = ${(C*1.8).toFixed(2)}`, `${(C*1.8).toFixed(2)} + 32 = ${ans}`];
+                document.getElementById('prob-tag').innerText = "Physics: Temperature";
+            }
+            // 4. TRAINS (25%)
             else {
                 const L = parseFloat(getNum(100, 400));
                 const S = parseFloat(getNum(36, 108)); // km/h
