--- a/index.html
+++ b/index.html
@@ -839,28 +839,76 @@
             if(isNaN(v)) return r.innerText="...";
             r.innerText = (u==='kmh') ? `= ${(v*5/18).toFixed(2)} m/s` : `= ${(v*18/5).toFixed(2)} km/h`;
         }
-        function convertCurrency() {
-            // Updated rates including new currencies
-            const rates = {
-                'USD': 1, 
-                'EUR': 0.95, 
-                'INR': 83.5, 
-                'GBP': 0.79, 
-                'JPY': 150.0, 
-                'AUD': 1.52, 
-                'CAD': 1.36, 
-                'CNY': 7.20,
-                'CHF': 0.90, // Approx
-                'SGD': 1.35, // Approx
-                'AED': 3.67  // Pegged
-            };
-            const val = parseFloat(document.getElementById('conv-cur-val').value);
-            const from = document.getElementById('conv-cur-from').value;
-            const to = document.getElementById('conv-cur-to').value;
-            const res = document.getElementById('conv-cur-res');
-            if(isNaN(val)) return res.innerText = "...";
-            res.innerText = `= ${(val / rates[from] * rates[to]).toFixed(2)} ${to}`;
+        // -----------------------------
+// REAL-TIME CURRENCY CONVERTER
+// -----------------------------
+
+const CURRENCY_API_KEY = "cur_live_oPy25V0hTyzmxvWoOZzeD3GvjFShe2mpiO1EO5od";
+const CURRENCY_API_URL = "https://api.currencyapi.com/v3/latest";
+
+// Cache to reduce API calls
+let currencyCache = {};
+let cacheBase = "";
+let cacheTime = 0;
+
+// Fetch rates from API (cached for 10 minutes)
+async function getCurrencyRates(baseCurrency) {
+    const now = Date.now();
+
+    // Use cache if valid
+    if (currencyCache && cacheBase === baseCurrency && (now - cacheTime) < 10 * 60 * 1000) {
+        return currencyCache;
+    }
+
+    const response = await fetch(
+        `${CURRENCY_API_URL}?apikey=${CURRENCY_API_KEY}&base_currency=${baseCurrency}`
+    );
+
+    if (!response.ok) {
+        throw new Error("Currency API request failed");
+    }
+
+    const json = await response.json();
+
+    currencyCache = json.data;
+    cacheBase = baseCurrency;
+    cacheTime = now;
+
+    return currencyCache;
+}
+
+// Main converter function (called by UI)
+async function convertCurrency() {
+    const amount = parseFloat(document.getElementById("conv-cur-val").value);
+    const from = document.getElementById("conv-cur-from").value;
+    const to = document.getElementById("conv-cur-to").value;
+    const resultBox = document.getElementById("conv-cur-res");
+
+    if (isNaN(amount)) {
+        resultBox.innerText = "...";
+        return;
+    }
+
+    resultBox.innerText = "Fetching live rate...";
+
+    try {
+        const rates = await getCurrencyRates(from);
+
+        if (!rates[to]) {
+            resultBox.innerText = "Currency not supported";
+            return;
         }
+
+        const rate = rates[to].value;
+        const converted = amount * rate;
+
+        resultBox.innerText = `= ${converted.toFixed(2)} ${to}`;
+    } catch (error) {
+        console.error(error);
+        resultBox.innerText = "Error fetching live rates";
+    }
+}
+
 
         // --- PRACTICE & QUIZ LOGIC (OVERHAULED) ---
         let currentProblem = null;
@@ -1038,3 +1086,4 @@
     </script>
 </body>
 </html>
+
